--- a/Vcopy.ipynb
+++ b/Vcopy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Processing"
+    "# Data Preprocessing"
    ]
   },
   {
@@ -27,13 +27,13 @@
      "text": [
       "/home/amirhossein_sr/.local/lib/python3.10/site-packages/matplotlib/projections/__init__.py:63: UserWarning: Unable to import Axes3D. This may be due to multiple versions of Matplotlib being installed (e.g. as a system package and as a pip package). As a result, the 3D projection is not available.\n",
       "  warnings.warn(\"Unable to import Axes3D. This may be due to multiple versions of \"\n",
-      "2024-04-13 19:13:58.984118: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-04-13 19:13:59.031572: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-04-13 19:13:59.031617: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-04-13 19:13:59.032914: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-04-13 19:13:59.040546: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-04-13 12:44:11.085077: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-04-13 12:44:11.134540: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-04-13 12:44:11.134584: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-04-13 12:44:11.136073: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-04-13 12:44:11.144223: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-04-13 19:13:59.984806: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-04-13 12:44:12.175537: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
     "import h5py\n",
     "\n",
     "from keras.regularizers import l2\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "# from keras.preprocessing.image import ImageDataGenerator\n",
     "# from keras.layers.advanced_activations import LeakyReLU\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
@@ -82,9 +82,8 @@
    "outputs": [],
    "source": [
     "use_cache = 1\n",
-    "dataset_path = r'../Dataset/v2_cam1_cam2'\n",
-    "\n",
-    "np.random.seed(1234)\n",
+    "dataset_path = r'../Dataset/'\n",
+    "np.random.seed(2016)\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
@@ -106,37 +105,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_train(num_classes=10):\n",
-    "    train_dir_cam1 = dataset_path + '/Camera 1/train/'\n",
-    "    train_dir_cam2 = dataset_path + '/Camera 2/train/'\n",
-    "\n",
+    "def load_train():\n",
+    "    df = pd.read_csv(dataset_path + 'v2_cam1_cam2/auc.distracted.driver.train.csv')\n",
+    "    x = df.iloc[:,0]\n",
+    "    y = df.iloc[:,1]\n",
     "    X_train = []\n",
     "    Y_train = []\n",
-    "\n",
     "    print('Read train images')\n",
-    "\n",
-    "    for label in range(num_classes):\n",
-    "        class_label = 'c' + str(label)  # Example: c0\n",
-    "        class_dir_cam1 = train_dir_cam1 + class_label\n",
-    "        class_dir_cam2 = train_dir_cam2 + class_label\n",
-    "\n",
-    "        x1 = os.listdir(class_dir_cam1)\n",
-    "        x2 = os.listdir(class_dir_cam2)\n",
-    "\n",
-    "        for i in range (0,len(x1)):\n",
-    "            print(f\"Reading image {x1[i]} of camera 1 - class {class_label}: {i}/{len(x1)}\")\n",
-    "            img = get_im_cv2(class_dir_cam1 + '/' + x1[i])\n",
-    "            X_train.append(img)\n",
-    "            Y_train.append(label)\n",
-    "            # if i == 5: break\n",
-    "\n",
-    "        for i in range (0,len(x2)):\n",
-    "            print(f\"Reading image of camera 2 - class {class_label}: {i}/{len(x2)}\")\n",
-    "            img = get_im_cv2(class_dir_cam2 + '/' + x2[i])\n",
-    "            X_train.append(img)\n",
-    "            Y_train.append(label)\n",
-    "\n",
-    "\n",
+    "    for i in range (0,len(x)):\n",
+    "        fl= dataset_path + r'v1_cam1_no_split/' + r'/'.join(x[i].split('/')[-2:])\n",
+    "        print(f\"Reading image {i}/{len(x)}\")\n",
+    "        img = get_im_cv2(fl)\n",
+    "        X_train.append(img)\n",
+    "        Y_train.append(y[i])\n",
+    "    \n",
+    "    df_xx = pd.read_csv(dataset_path + 'auc.distracted.driver.test.csv')\n",
+    "    test_xx = []\n",
     "    return X_train, Y_train"
    ]
   },
@@ -146,41 +130,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_valid(num_classes=10):\n",
-    "    test_dir_cam1 = dataset_path + '/Camera 1/test/'\n",
-    "    test_dir_cam2 = dataset_path + '/Camera 2/test/'\n",
+    "# def load_train():\n",
+    "#     classes = os.listdir(dataset_path + 'v1_cam1_no_split')\n",
+    "#     X_train = []\n",
+    "#     Y_train = []\n",
     "\n",
-    "    X_valid = []\n",
-    "    Y_valid = []\n",
-    "\n",
-    "    print('Read test images')\n",
-    "\n",
-    "    for label in range(num_classes):\n",
-    "        class_label = 'c' + str(label)  # Example: c0\n",
-    "        class_dir_cam1 = test_dir_cam1 + class_label\n",
-    "        class_dir_cam2 = test_dir_cam2 + class_label\n",
-    "\n",
-    "        x1 = os.listdir(class_dir_cam1)\n",
-    "        x2 = os.listdir(class_dir_cam2)\n",
-    "\n",
-    "        for i in range (0,len(x1)):\n",
-    "            print(f\"Reading image {x1[i]} of camera 1 - class {class_label}: {i}/{len(x1)}\")\n",
-    "            img = get_im_cv2(class_dir_cam1 + '/' + x1[i])\n",
-    "            X_valid.append(img)\n",
-    "            Y_valid.append(label)\n",
-    "\n",
-    "        for i in range (0,len(x2)):\n",
-    "            print(f\"Reading image of camera 2 - class {class_label}: {i}/{len(x2)}\")\n",
-    "            img = get_im_cv2(class_dir_cam2 + '/' + x2[i])\n",
-    "            X_valid.append(img)\n",
-    "            Y_valid.append(label)\n",
-    "\n",
-    "    return X_valid, Y_valid"
+    "#     print('Read train images')\n",
+    "#     for class_name in classes:\n",
+    "#         class_path = dataset_path + r'v1_cam1_no_split/' + class_name\n",
+    "#         if os.path.isdir(class_path):\n",
+    "#             print(f\"Reading Floder {class_name}...\")\n",
+    "#             image_filenames = os.listdir(class_path)\n",
+    "#             for image_filename in image_filenames:\n",
+    "#                 image_path = class_path + r'/' + image_filename\n",
+    "#                 image = get_im_cv2(image_path)\n",
+    "#                 X_train.append(image)\n",
+    "#                 Y_train.append(classes.index(class_name))\n",
+    "#     return X_train, Y_train"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_valid():\n",
+    "    df = pd.read_csv(dataset_path + 'v2_cam1_cam2/auc.distracted.driver.test.csv')\n",
+    "    x = df.iloc[:,0]\n",
+    "    y = df.iloc[:,1]\n",
+    "    X_valid = []\n",
+    "    Y_valid = []\n",
+    "    print('Read test images')\n",
+    "    for i in range (0,len(x)):\n",
+    "        fl = dataset_path + r'v1_cam1_no_split/' + r'/'.join(x[i].split('/')[-2:])\n",
+    "        print(f\"Reading image {i}/{len(x)}\")\n",
+    "        img = get_im_cv2(fl)\n",
+    "        X_valid.append(img)\n",
+    "        Y_valid.append(y[i])\n",
+    "    return X_valid, Y_valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,12 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_and_normalize_train_data():\n",
-    "    cache_path = dataset_path + '/cache/train_v12.dat'\n",
+    "    # cache_path = r'../Dataset/v2_cam1_cam2/cache/train_v12.dat'\n",
+    "    cache_path = r'../Dataset/cache/train_v1.dat'\n",
     "    if not os.path.isfile(cache_path) or use_cache == 0:\n",
     "        train_data, train_target= load_train()\n",
     "        cache_data((train_data, train_target), cache_path)\n",
@@ -223,7 +217,7 @@
     "        (train_data, train_target) = restore_data(cache_path)\n",
     "    \n",
     "    print('Convert to numpy...')\n",
-    "    train_data = np.array(train_data, dtype=np.float16)\n",
+    "    train_data = np.array(train_data, dtype=np.uint8)\n",
     "    train_target = np.array(train_target, dtype=np.uint8)\n",
     "    \n",
     "    print('Reshape...')\n",
@@ -232,9 +226,7 @@
     "    # Normalise the train data\n",
     "    print('Convert to float...')\n",
     "    train_data = train_data.astype('float16')\n",
-    "    # mean_pixel = [80.857, 81.106, 82.928]\n",
-    "    mean_pixel = np.mean(np.mean(train_data, axis=(1, 2)), axis=0)\n",
-    "    print(mean_pixel)\n",
+    "    mean_pixel = [80.857, 81.106, 82.928]\n",
     "    \n",
     "    print('Substract 0...')\n",
     "    train_data[:, :, :, 0] -= mean_pixel[0]\n",
@@ -262,13 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_and_normalize_test_data():\n",
     "    start_time = time.time()\n",
-    "    cache_path = dataset_path + '/cache/test_v12.dat'\n",
+    "    # cache_path = r'../Dataset/v2_cam1_cam2/cache/test_v12.dat'\n",
+    "    cache_path = r'../Dataset/cache/test_v1.dat'\n",
     "\n",
     "    if not os.path.isfile(cache_path) or use_cache == 0:\n",
     "        test_data, test_target = load_valid()\n",
@@ -277,13 +270,13 @@
     "        print('Restore test from cache [{}]!')\n",
     "        (test_data, test_target) = restore_data(cache_path)\n",
     "\n",
-    "    test_data = np.array(test_data, dtype=np.float16)\n",
+    "    test_data = np.array(test_data, dtype=np.uint8)\n",
     "    test_data = test_data.transpose((0, 1, 2, 3))\n",
     "\n",
     "    # Normalise the test data data\n",
     "\n",
     "    test_data = test_data.astype('float16')\n",
-    "    mean_pixel = np.mean(np.mean(test_data, axis=(1, 2)), axis=0)\n",
+    "    mean_pixel = [80.857, 81.106, 82.928]\n",
     "\n",
     "    test_data[:, :, :, 0] -= mean_pixel[0]\n",
     "\n",
@@ -302,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,20 +306,19 @@
       "Convert to numpy...\n",
       "Reshape...\n",
       "Convert to float...\n",
-      "[0.3167 0.3176 0.3247]\n",
       "Substract 0...\n",
       "Substract 1...\n",
       "Substract 2...\n",
-      "Train shape: (14978, 224, 224, 3)\n",
-      "14978 train samples\n",
-      "Target shape: (14978, 10)\n",
-      "14978 target samples\n",
+      "Train shape: (12977, 224, 224, 3)\n",
+      "12977 train samples\n",
+      "Target shape: (12977, 10)\n",
+      "12977 target samples\n",
       "Restore test from cache [{}]!\n",
-      "Test shape: (2330, 224, 224, 3)\n",
-      "2330 test samples\n",
-      "Target shape: (2330, 10)\n",
-      "2330 target samples\n",
-      "Read and process test data time: 9.97 seconds\n"
+      "Test shape: (4331, 224, 224, 3)\n",
+      "4331 test samples\n",
+      "Target shape: (4331, 10)\n",
+      "4331 target samples\n",
+      "Read and process test data time: 10.89 seconds\n"
      ]
     }
    ],
@@ -344,17 +336,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 64\n",
+    "batch_size = 96\n",
     "nb_epoch = 250"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +406,7 @@
     "    model.summary()    \n",
     "\n",
     "    # model.load_weights('weights.h5')\n",
-    "    opt = SGD(learning_rate=0.0001, momentum=0.9, weight_decay=10e-6)\n",
+    "    opt = SGD(learning_rate=0.0003, momentum=0.9, weight_decay=10e-6)\n",
     "\n",
     "    model.compile(opt, loss=CategoricalCrossentropy(), metrics=['accuracy'])\n",
     "    return model"
@@ -422,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1228,8 +1220,9 @@
        "200"
       ]
      },
+     "execution_count": 24,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1238,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
